Progress on draft.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -123,8 +123,9 @@
 \newcommand{\CovProp}{\mathbf{C}} % Proposal covariance matrix
 \newcommand{\NMCMC}{K_{\text{MCMC}}} % Proposal covariance matrix
 \newcommand{\accProbMH}{\alpha} % Metropolis-Hastings acceptance probability
-\newcommand{\avgAccProbMH}{a}
+\newcommand{\avgAccProbMH}{\overline{a}}
 \newcommand{\accProbRatio}{r}
+\newcommand{\likRatio}{\lambda}
 \newcommand{\MarkovKernel}{P}
 \newcommand{\mcmcIndex}{k}
 \newcommand{\indexMCMC}[2][\mcmcIndex]{{#2}_{#1}}
