--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -208,6 +208,18 @@ eprint = { https://doi.org/10.1198/106186008X320681}
 }
 
 
+% Istem paper using noisy Monte Carlo approach. 
+@Article{FerEmulation,
+AUTHOR = {Fer, I. and Kelly, R. and Moorcroft, P. R. and Richardson, A. D. and Cowdery, E. M. and Dietze, M. C.},
+TITLE = {Linking big models to big data: efficient ecosystem model calibration through Bayesian model emulation},
+JOURNAL = {Biogeosciences},
+VOLUME = {15},
+YEAR = {2018},
+NUMBER = {19},
+PAGES = {5801--5830},
+URL = {https://bg.copernicus.org/articles/15/5801/2018/},
+DOI = {10.5194/bg-15-5801-2018}
+}
 
 
 %  ---------------------------------------------------------------------------------------------------
